Trying to make pythondaw pippable

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,6 @@ version = "23.7.18"
 dependencies = [
     "numpy"
 ]
-packages = [
-    { include = "daw" },
-]
+
+[tool.setuptools]
+py-modules = ["daw"]
